src/nationalarchives/utilities/lists/_index.scss
@use "../../tools/colour";
@use "../../tools/media";
@use "../../tools/spacing";
@use "../../tools/typography";
@use "../../utilities/typography" as typographyUtils;

ul,
ol {
  margin: 0;
  padding: 0;
}

.tna-ul {
  list-style-type: disc;
}

.tna-ul,
.tna-ol {
  margin-top: spacing.space(1);
  padding-left: spacing.space(2);

  &:first-child {
    margin-top: 0;
  }

  &--plain {
    padding-left: 0;
  }

  &--plain,
  &--no-list-style {
    list-style: none;
  }

  & > li > & {
    margin-top: 0;
    padding-left: spacing.space(1.25);
  }

  > li {
    &::marker {
      @include colour.colour-font("accent-list-marker");
      @include typography.main-font-weight-bold;
    }
  }

  &--spaced > li + li {
    margin-top: spacing.space(0.5);
  }

  &--spaced > li > & {
    margin-top: spacing.space(1);
    margin-bottom: spacing.space(1);
  }

  &--dashed {
    > li::marker {
      content: "—  ";
      @include colour.colour-font("font-light");
      @include typography.main-font-weight;
    }
  }
}

.tna-dl-chips {
  @include spacing.space-above(true);

  display: flex;
  flex-wrap: wrap;
  gap: spacing.space(0.75) spacing.space(1.5);

  @extend %chip-plain;

  dt {
    position: absolute;

    font-size: 0;
  }

  &__item {
    @extend %chip;
  }

  a#{&}__item {
    cursor: pointer;
  }

  &:not(#{&}--plain) {
    gap: spacing.space(0.5) spacing.space(1);
  }

  &--plain &__item {
    @extend %chip-plain;
  }

  &:not(#{&}--plain) &__item {
    @extend %chip-accent;
  }

  &--plain a#{&}__item {
    @include colour.colour-font("link");
  }
}

@mixin stacked-dl {
  dt,
  dd {
    width: 100%;
    margin-left: 0;
  }

  dd {
    padding-left: spacing.space(1);
  }

  &.tna-dl--plain {
    dt {
      padding-top: 0;
      padding-bottom: 0;

      .fa-solid {
        margin-top: 0;
      }
    }

    dd {
      margin-left: 0;
      padding-top: 0;
    }
  }

  &:not(.tna-dl--plain) {
    dt {
      @include colour.colour-background("background-tint");

      @include colour.colour-font("font-base");
    }

    dd {
      margin-left: 0;

      background: transparent !important;
    }
  }
}

.tna-dl {
  @include spacing.space-above(true);

  display: flex;
  flex-wrap: wrap;

  &:first-child {
    margin-top: 0;
  }

  dt,
  dd {
    margin: 0;
    padding: spacing.space(0.5) spacing.space(1);

    box-sizing: border-box;

    position: relative;

    word-wrap: break-word;
  }

  &--plain {
    dt {
      padding-top: 0;
      padding-left: 0;
    }

    dd {
      padding-top: 0;
      padding-right: 0;
    }
  }

  dt {
    width: 30%;

    @include typography.main-font-weight-bold;
  }

  dd {
    width: 70%;

    + dd {
      margin-left: 30%;
    }
  }

  &--icon-padding {
    dt {
      padding-left: 3rem !important;

      position: relative;

      .fa-solid {
        overflow: visible;

        position: absolute;
        top: 50%;
        left: spacing.space(1);

        @include colour.colour-font("icon-light");
        text-align: left;

        transform: translateY(-50%);
      }
    }
  }

  &--icon-padding#{&}--plain {
    dt {
      padding-left: spacing.space(2) !important;

      .fa-solid {
        margin-top: -#{spacing.space(0.25)};

        left: 0;
      }
    }

    dd {
      padding-left: spacing.space(2);
    }
  }

  &:not(&--plain) {
    dt:first-child,
    dd:nth-of-type(2n) + dt,
    dd:nth-of-type(2n + 1) {
      @include colour.tint;
    }
  }

  @include media.on-small {
    dt {
      width: 35%;
    }

    dd {
      width: 65%;

      + dd {
        margin-left: 35%;
      }
    }
  }

  &--stacked {
    @include stacked-dl;
  }

  @include media.on-tiny {
    @include stacked-dl;
  }

  @include colour.on-high-contrast-and-forced-colours {
    @include colour.colour-border("keyline-dark", 1px, solid, bottom);

    dt,
    dd {
      background: transparent !important;

      @include colour.colour-border("keyline-dark", 1px, solid, top);
    }
  }
}

